Fixed some sections. Section Step is ready

--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -12,6 +12,7 @@ block content
     include ../modules/section/_section-procedure
     include ../modules/section/_section-cost
     include ../modules/section/_section-serve
+    include ../modules/section/_section-step
 block foot
 block script
   script(src="libs/libs-min.js")
