--- a/app/scss/fonts/_fonts.scss
+++ b/app/scss/fonts/_fonts.scss
@@ -43,9 +43,9 @@
     content: $icon-arrow-big-left;
   }
 }
-.icon-arrow_left {
+.icon-arrow-left {
   &:before {
-    content: $icon-arrow_left;
+    content: $icon-arrow-left;
   }
 }
 .icon-arrow-right {
