--- a/app/scss/vars/_variables.scss
+++ b/app/scss/vars/_variables.scss
@@ -37,7 +37,7 @@ $icomoon-font-path: "../fonts/icons/" !default;
 
 $icon-arrow-big-right: "\e900";
 $icon-arrow-big-left: "\e901";
-$icon-arrow_left: "\e902";
+$icon-arrow-left: "\e902";
 $icon-arrow-right: "\e903";
 $icon-logo-agency: "\e904";
 $icon-loupe: "\e905";
