--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -302,3 +302,110 @@
     }
   }
 }
+// card infographics
+.card-infographics {
+  margin: 0 auto;
+  width: 95px;
+  height: 95px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: $swatch_1;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  &__figure {
+    margin: 0;
+    width: 100px;
+    max-height: 113px;
+    &_outer-position-figure {
+      &_1 {
+        margin-top: -1px;
+        margin-right: 16px;
+      }
+      &_2 {
+        margin-top: 3px;
+        margin-left: 4px;
+      }
+      &_3 {
+        margin-top: 12px;
+        margin-right: 21px;
+      }
+      &_4 {
+        margin-left: 5px;
+        margin-top: 3px;
+      }
+      &_5 {
+        margin-top: 12px;
+        margin-right: 4px;
+      }
+      &_6 {
+        margin-left: 6px;
+        margin-top: 12px;
+      }
+      &_7 {
+        margin-top: 30px;
+        margin-right: 10px;
+      }
+      &_8 {
+        margin-top: 6px;
+        margin-left: 20px;
+      }
+    }
+    &_size {
+      &_small {
+        width: 103px;
+      }
+      &_medium {
+        width: 120px;
+      }
+    }
+  }
+  &__picture {
+    display: block;
+  }
+  &_outer-position {
+    &_right {
+      margin-right: 25px;
+      margin-left: auto;
+      @media (min-width: $sm) {
+        margin-right: 50px;
+      }
+      @media (min-width: $lg) {
+        margin-right: 45px;
+      }
+    }
+    &_left {
+      margin-left: 25px;
+      margin-right: auto;
+      @media (min-width: $sm) {
+        margin-left: 50px;
+      }
+      @media (min-width: $lg) {
+        margin-left: 60px;
+      }
+    }
+    &_lower {
+      @media (min-width: $lg) {
+        margin-bottom: 40px;
+      }
+    }
+  }
+}
+
+.js-bg-color-animation {
+  @include animationColor(
+    bg-anim,
+    background-color,
+    $swatch_1,
+    $swatch_11,
+    0.8s,
+    ease-in-out,
+    infinite
+  );
+}
+
+.js-bg-color-active {
+  background-color: $swatch_16;
+}
