Minor changes added. Ready Work section

--- a/app/pug/modules/card/_card-feature.pug
+++ b/app/pug/modules/card/_card-feature.pug
@@ -4,7 +4,7 @@
     .card-feature
       .card-feature__box-content-top
         figure.card-feature__figure
-          img.card-feature__picture(src="../img/calendar.png", alt="calendar")
+          img.card-feature__picture(src="img/calendar.png", alt="calendar")
       .card-feature__box-content-bottom.card-feature__box-content-bottom_inner-position_left-small
         p.card-feature__title Рассрочка до 12 месяцев
         p.card-feature__txt Наши клиенты зачастую находятся в сложном&nbsp;финансовом положении, поэтому у
@@ -13,7 +13,7 @@
     .card-feature
       .card-feature__box-content-top.card-feature__box-content-top_outer-position_left-small
         figure.card-feature__figure
-          img.card-feature__picture(src="../img/plane.png", alt="plane")
+          img.card-feature__picture(src="img/plane.png", alt="plane")
       .card-feature__box-content-bottom.card-feature__box-content-bottom_outer-position_left-small
         p.card-feature__title Работаем в выходные
         p.card-feature__txt У вас плотный график?  - Не беда! Наш офис работает по выходным для&nbsp;
@@ -22,7 +22,7 @@
     .card-feature
       .card-feature__box-content-top.card-feature__box-content-top_outer-position_left-deep
         figure.card-feature__figure
-          img.card-feature__picture(src="../img/result.png", alt="result")
+          img.card-feature__picture(src="img/result.png", alt="result")
       .card-feature__box-content-bottom.card-feature__box-content-bottom_outer-position_left-deep
         p.card-feature__title Оплата по результату
         p.card-feature__txt  Окончательная оплата происходит по завершению процедуры банкротства&nbsp;
