--- a/app/pug/modules/card/_card-info.pug
+++ b/app/pug/modules/card/_card-info.pug
@@ -4,7 +4,7 @@
     .card-info.card-info_inner-position_right.card-info_inner-position_special-align
       .card-info__box-content-top
         figure.card-info__figure.wow.rotateIn(data-wow-offset="10")
-          img.card-info__picture(src="../img/portrait.png", alt="portrait")
+          img.card-info__picture(src="img/portrait.png", alt="portrait")
       .card-info__box-content-bottom
         p.card-info__txt С вами работает&nbsp;
           span.card-info__txt.card-info__txt_bold персональный менеджер по банкротству,&nbsp;
@@ -13,7 +13,7 @@
     .card-info.card-info_inner-position_left.card-info_inner-position_top
       .card-info__box-content-top
         figure.card-info__figure.card-info__figure_outer-position_bottom.wow.rotateIn(data-wow-offset="10")
-          img.card-info__picture(src="../img/packs.png", alt="packs")
+          img.card-info__picture(src="img/packs.png", alt="packs")
       .card-info__box-content-bottom.card-info__box-content-bottom_inner-position_top.card-info__box-content-bottom_outer-position_top
         p.card-info__txt Соберем весь пакет документов.&nbsp;
           span.card-info__txt.card-info__txt_bold.card-info__txt_md-inner-position С нами вы не тратите время и&nbsp;нервы!
@@ -21,7 +21,7 @@
     .card-info.card-info_inner-position_right.card-info_outer-position_top-deep
       .card-info__box-content-top
         figure.card-info__figure.wow.rotateIn(data-wow-offset="10")
-          img.card-info__picture(src="../img/docs.png", alt="docs")
+          img.card-info__picture(src="img/docs.png", alt="docs")
       .card-info__box-content-bottom.card-info__box-content-bottom_outer-position_top
         p.card-info__txt Все гарантии мы&nbsp;
           span.card-info__txt.card-info__txt_bold.card-info__txt_inner-position прописываем в&nbsp;договоре!
@@ -29,7 +29,7 @@
     .card-info.card-info_inner-position_left.card-info_outer-position_top-small
       .card-info__box-content-top
         figure.card-info__figure.card-info__figure_outer-position_bottom.card-info__figure_inner-position_left.wow.rotateIn(data-wow-offset="5")
-          img.card-info__picture(src="../img/people.png", alt="people")
+          img.card-info__picture(src="img/people.png", alt="people")
       .card-info__box-content-bottom.card-info__box-content-bottom_inner-position_top.card-info__box-content-bottom_outer-position_left
         p.card-info__txt 3 опытных финансовых управляющих&nbsp;в&nbsp;команде!&nbsp;
           span.card-info__txt.card-info__txt_bold.card-info__txt_xl-inner-position Ваше дело в надежных руках!
