--- a/app/pug/modules/section/_section-cost.pug
+++ b/app/pug/modules/section/_section-cost.pug
@@ -10,4 +10,4 @@ section.section.section-cost
         include ../form/_form-feedback
       .section-cost__box-figure.wow.slideInRight(data-wow-offset="250")
         figure.section-cost__figure
-          img.section-cost__picture(src="../img/femida.png", alt="femida")
+          img.section-cost__picture(src="img/femida.png", alt="femida")
