--- a/app/pug/modules/section/_section-finance.pug
+++ b/app/pug/modules/section/_section-finance.pug
@@ -18,4 +18,4 @@ section.section.section-finance
             include ../form/_form-feedback
       .section-finance__box-figure
         figure.section-finance__figure.wow.slideInLeft(data-wow-offset="200")
-          img.section-finance__picture(src="../img/pig.png", alt="pig")
+          img.section-finance__picture(src="img/pig.png", alt="pig")
