--- a/app/pug/modules/section/_section-step.pug
+++ b/app/pug/modules/section/_section-step.pug
@@ -3,7 +3,7 @@ section.section.section-step
     .section-step__wrap
       .section-step__box-figure
         figure.section-step__figure.wow.slideInLeft(data-wow-offset="350")
-          img.section-step__picture(src="../img/book.png", alt="book")
+          img.section-step__picture(src="img/book.png", alt="book")
     .section-step__box-text
       h2.section-step__heading Сколько длится процедура банкротства?
       span.section-step__subheading В среднем, процедура банкротства&nbsp;
