--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -13,6 +13,7 @@ block content
     include ../modules/section/_section-cost
     include ../modules/section/_section-serve
     include ../modules/section/_section-step
+    include ../modules/section/_section-work
 block foot
 block script
   script(src="libs/libs-min.js")
