--- a/app/scss/vars/_variables.scss
+++ b/app/scss/vars/_variables.scss
@@ -31,6 +31,9 @@ $gradient-accent: linear-gradient(
   #ff0909 100%
 );
 
+// shadow color
+$shadowColor: rgba(0, 0, 0, 0.1);
+
 //font-icon
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "../fonts/icons/" !default;
