--- a/app/scss/components/_slider.scss
+++ b/app/scss/components/_slider.scss
@@ -142,7 +142,6 @@
     font-size: 17px;
     font-weight: 300;
     line-height: 27px;
-    // add
     @media (min-width: $sm) {
       min-height: 105px;
     }
@@ -241,4 +240,160 @@
   }
   &__pagination {
   }
+}
+
+// slider work
+.slider-work {
+  position: relative;
+  @media (min-width: $xl) {
+    padding-left: 17px;
+  }
+  .swiper-container {
+    @media (min-width: $lg) {
+      width: 900px;
+    }
+    @media (min-width: $xl) {
+      width: 950px;
+    }
+  }
+  .swiper-slide {
+    width: auto;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__slide {
+  }
+  &__wrapper {
+    height: 450px;
+  }
+  &__content {
+    max-width: 262px;
+    margin: 0 auto;
+    box-shadow: -2px 11px 15px 0 $shadowColor;
+    overflow: hidden;
+    @media (min-width: $xl) {
+      box-shadow: -7px 17px 22px 0 $shadowColor;
+    }
+  }
+  &__link {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    overflow: hidden;
+  }
+  &__overlay {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 350px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: $swatch_1;
+    opacity: 0.7;
+    z-index: 10;
+    opacity: 0;
+    &::after {
+      font-family: $icomoon-font-family;
+      content: $icon-loupe;
+      position: absolute;
+      font-size: 40px;
+      color: $swatch_2;
+      z-index: 11;
+      opacity: 1;
+    }
+  }
+  &__figure {
+    margin: 0;
+    max-width: 262px;
+    max-height: 350px;
+  }
+  &__picture {
+    display: block;
+  }
+  &__control-panel {
+    display: none;
+    @media (min-width: $lg) {
+      display: block;
+      width: 100%;
+      height: 40px;
+      position: absolute;
+      bottom: 14px;
+      top: 360px;
+      z-index: 1000;
+    }
+  }
+  &__control-panel .button-arrow_outer-position {
+    &_right {
+      position: absolute;
+      right: 0;
+      top: -205px;
+      @media (min-width: $xl) {
+        right: 10px;
+      }
+    }
+    &_left {
+      @extend .button-arrow_outer-position_right;
+      left: 0;
+      @media (min-width: $xl) {
+        left: -10px;
+      }
+    }
+  }
+  &__box-pagination
+    > .slider-work__pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet {
+    @include paginationAppearance($swatch_4, $xl);
+  }
+  &__box-pagination
+    > .slider-work__pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet:hover {
+    @include paginationAppearanceHover($swatch_16);
+  }
+  &__box-pagination
+    > .slider-work__pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet:nth-child(2n) {
+    @include paginationAppearanceDistance(10, 10);
+  }
+  &__box-pagination
+    > .slider-work__pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet:last-child {
+    margin-right: 0;
+  }
+  &__box-pagination
+    > .slider-work__pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    @include paginationAppearanceActive($swatch_1);
+  }
+  &__box-pagination {
+    max-width: 100px;
+    margin-top: -70px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 0;
+    position: relative;
+    z-index: 1000;
+    @media (min-width: $lg) {
+      display: none;
+    }
+  }
+}
+.js-show-overlay {
+  @include animationShowHide(showOverlay, 0, 0, 0.7, 0.4s, linear);
+  opacity: 0.7;
+}
+.js-hide-overlay {
+  @include animationShowHide(hideOverlay, 0.7, 0.5, 0, 0.3s, linear);
+}
+.js-arrow-disabled {
+  color: $swatch_5 !important;
+  cursor: default !important;
 }
