--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -14,6 +14,7 @@ block content
     include ../modules/section/_section-serve
     include ../modules/section/_section-step
     include ../modules/section/_section-work
+    include ../modules/section/_section-guarantees
 block foot
 block script
   script(src="libs/libs-min.js")
