Minor changes and ready section address

--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -15,6 +15,7 @@ block content
     include ../modules/section/_section-step
     include ../modules/section/_section-work
     include ../modules/section/_section-guarantees
+    include ../modules/section/_section-address
 block foot
 block script
   script(src="libs/libs-min.js")
