--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,4 +14,5 @@
 @import "components/list";
 @import "components/button";
 @import "components/modal";
+@import "components/map";
 @import "components/footer";
