--- a/app/scss/vars/_variables.scss
+++ b/app/scss/vars/_variables.scss
@@ -20,6 +20,8 @@ $swatch_17: #fbdbdb;
 $swatch_18: #f9a510;
 $swatch_19: #e2030352;
 $swatch_20: #333333;
+$swatch_21: #5a5a5a;
+$swatch_22: #5c5c5c;
 
 // gradient
 $gradient-accent: linear-gradient(
