The footer is ready. There are also minor fixes

--- a/app/pug/modules/footer/_footer.pug
+++ b/app/pug/modules/footer/_footer.pug
@@ -1,1 +1,15 @@
-
+footer.footer
+  .container
+    .footer__box-content
+      .grid
+        .grid__item.grid__item_md-indent-inner.width-1-1.width-1-3-md
+          .footer__box-link.footer__box-link_position-inner_left.footer__box-link_position-outer_left
+            a.footer__link.ban-link(href="#" target="_blank")
+              span.footer__txt.footer__txt_font.footer__txt_small Реквизиты
+        .grid__item.grid__item_md-indent-inner.width-1-1.width-1-3-md
+          .footer__box-logo.footer__box-logo_position-inner_left
+            include ../logo/_logo
+        .grid__item.grid__item_md-indent-inner.width-1-1.width-1-3-md
+          .footer__box-link.footer__box-link_position-inner_right.footer__box-link_position-outer_right
+            a.footer__link(href="tel:88182635000")
+              span.footer__txt +8 (818) 263-50-00
