--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -17,6 +17,7 @@ block content
     include ../modules/section/_section-guarantees
     include ../modules/section/_section-address
 block foot
+  include ../modules/footer/_footer
 block script
   script(src="libs/libs-min.js")
   script(src="js/common-min.js")
