--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,3 +1,87 @@
 /*footer*/
 .footer {
+  background-color: $swatch_8;
+  padding-top: 290px;
+  padding-bottom: 30px;
+  @media (min-width: $sm) {
+    padding-top: 277px;
+  }
+  @media (min-width: $md) {
+    padding-top: 177px;
+  }
+  @media (min-width: $xl) {
+    padding-top: 126px;
+  }
+
+  &__box-content {
+    max-width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  &__box-link {
+    text-align: center;
+    @media (min-width: $md) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    &_position-inner {
+      &_left {
+        @media (min-width: $md) {
+          justify-content: flex-start;
+        }
+      }
+      &_right {
+        @media (min-width: $md) {
+          justify-content: flex-end;
+        }
+      }
+    }
+    &_position-outer {
+      &_left {
+        @media (min-width: $md) {
+          margin-left: 20px;
+        }
+        @media (min-width: $xl) {
+          margin-left: 8px;
+        }
+      }
+      &_right {
+        @media (min-width: $md) {
+          margin-right: 20px;
+        }
+        @media (min-width: $xl) {
+          margin-right: -13px;
+        }
+      }
+    }
+  }
+  &__link {
+    @extend .header__link;
+    transition: 0.3s;
+    &:hover {
+      color: $swatch_16;
+    }
+  }
+  &__txt {
+    @extend .header__txt_big;
+    &_font {
+      font-family: "Roboto";
+    }
+    &_small {
+      font-size: 13px;
+      font-weight: 500;
+    }
+  }
+  &__box-logo {
+    padding: 5px 0 5px;
+    &_position-inner {
+      &_left {
+        @media (min-width: $xl) {
+          padding-left: 20px;
+        }
+      }
+    }
+  }
 }
