New tasks in the gulp. Policy added

--- a/app/pug/modules/form/_form-feedback.pug
+++ b/app/pug/modules/form/_form-feedback.pug
@@ -18,5 +18,5 @@ form.form-feedback(action="/" method="POST")
       .form-feedback__box-checkbox
         input.form-feedback__checkbox(type="checkbox" checked required)
         span.form-feedback__txt-checkbox Согласен с&nbsp;
-          a.form-feedback__link(href="#" target="_blank") обработкой персональных данных
+          a.form-feedback__link(href="policy/policy.pdf" target="_blank") обработкой персональных данных
 
