--- a/app/scss/components/_base.scss
+++ b/app/scss/components/_base.scss
@@ -11,6 +11,12 @@
   padding: 0;
 }
 
+*:invalid,
+:-moz-submit-invalid,
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
 [type="checkbox"]:invalid {
   box-shadow: none;
 }
