smooth scrolling ready

--- a/app/pug/modules/header/_header.pug
+++ b/app/pug/modules/header/_header.pug
@@ -6,7 +6,7 @@ header.header
           include ../logo/_logo
         .grid__item.grid__item_xl-indent-inner.width-1-1.width-1-2-sm.width-1-3-md.width-1-4-lg
           .header__box-link.header__box-link_position_right.header__box-link_indent-inner_left
-            a.header__link(href="#map")
+            a.header__link.js-smooth-scroll-slow(href="#address")
               span.header__icon.icon-marker
               span.header__txt.header__txt_font_sans-serif.header__txt_font_bold.header__txt_position_bottom Архангельск
         .grid__item.grid__item_xl-indent-inner.width-1-1.width-1-2-sm.width-1-3-md.width-1-4-lg.width-1-3-xl
