--- a/app/pug/modules/section/_section-address.pug
+++ b/app/pug/modules/section/_section-address.pug
@@ -1,4 +1,4 @@
-section.section.section-address
+section.section.section-address#address
   .section-address__box-text
     .section-address__contact
       span.section-address__title Вы можете найти нас по&nbsp;адресу:
