--- a/app/pug/modules/section/_section-cost.pug
+++ b/app/pug/modules/section/_section-cost.pug
@@ -1,4 +1,4 @@
-section.section.section-cost
+section.section.section-cost#cost
   .container
     .section-cost__box-content
       .section-cost__box-content-top
