--- a/app/pug/modules/section/_section-guarantees.pug
+++ b/app/pug/modules/section/_section-guarantees.pug
@@ -1,4 +1,4 @@
-section.section.section-guarantees
+section.section.section-guarantees#guarantees
   .container
     .section-guarantees__box-content
       .section-guarantees__box-content-top
