--- a/app/pug/modules/slider/_slider-step.pug
+++ b/app/pug/modules/slider/_slider-step.pug
@@ -9,7 +9,7 @@
               span.slider-step__txt_position   Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места,&nbsp;
               span.slider-step__txt_position мы сделаем это за вас!
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -19,7 +19,7 @@
               | На основе этих документов и проведенного анализа,
               | поможем с Заявлением о признании банкротом.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -29,7 +29,7 @@
               | После чего состоится первое заседание.
               | На нём будет рассмотрение заявление, и назначен арбитражный управляющий.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -39,7 +39,7 @@
               | Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
               | Составим план дальнейших действий.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -49,7 +49,7 @@
               | Подготовим должника к собранию кредиторов, дадим  необходимые инструкции.
               | Назначим куратора собрания кредиторов.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -59,7 +59,7 @@
               | Представим кредиторам обширный план реструктуризации долгов.
               | Также представим кредиторам отчёт финансового анализа долгов.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -69,7 +69,7 @@
               | Будем поддерживать контакт с кредиторами.
               | Смотреть чтобы все придерживались плану реструктуризации долгов.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
       .swiper-slide.slider-step__slide
         .slider-step__content
@@ -79,7 +79,7 @@
               | Проведем юридически грамотное списание долгов.
               | Добьемся быстрого заключения, признание должника банкротом.
           .slider-step__box-button
-            a.button.button_middle.slider-step__button(href="#" tabindex="-1")
+            a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
   .slider-step__control-panel
     .button-arrow.button-arrow_slim.icon-arrow-right.slider-step-button-next
