--- a/app/pug/modules/modal/_modal.pug
+++ b/app/pug/modules/modal/_modal.pug
@@ -2,7 +2,7 @@
   .modal__box-button
     button#btnCloseModal.button-close
   .modal__box-content
-    -let formFeedbackTitle = "Мы свяжется с вами "
+    -let formFeedbackTitle = "Мы свяжемся с вами "
     -let formFeedbackSubtitle = "чтобы обговорить финансовые проблемы"
     -let formFeedbackBtnValue = "Перезвоните мне"
     include ../form/_form-feedback
