--- a/app/pug/modules/slider/_slider-step.pug
+++ b/app/pug/modules/slider/_slider-step.pug
@@ -15,7 +15,7 @@
         .slider-step__content
           .slider-step__box-text
             span.slider-step__title Поможем составить заявления
-            span.slider-step__txt Мы накопили обширный опыт и сможем грамотно про анализировать документы.&nbsp;
+            span.slider-step__txt Мы накопили обширный опыт и сможем грамотно проанализировать документы.&nbsp;
               | На основе этих документов и проведенного анализа,
               | поможем с Заявлением о признании банкротом.
           .slider-step__box-button
@@ -27,7 +27,7 @@
             span.slider-step__title Подача документов в&nbsp;суд
             span.slider-step__txt Сделаем чтобы суд принял заявление в течении трех&nbsp;дней.&nbsp;
               | После чего состоится первое заседание.
-              | На нём будет рассмотрение заявление, и назначен арбитражный управляющий.
+              | На нём будет рассмотрение заявления, и назначен арбитражный управляющий.
           .slider-step__box-button
             a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
@@ -35,7 +35,7 @@
         .slider-step__content
           .slider-step__box-text
             span.slider-step__title Назначение управляющего
-            span.slider-step__txt Постараемся чтобы быстро назначали финансового управляющего.&nbsp;
+            span.slider-step__txt Постараемся чтобы быстро назначили финансового управляющего.&nbsp;
               | Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
               | Составим план дальнейших действий.
           .slider-step__box-button
@@ -67,7 +67,7 @@
             span.slider-step__title Быстрая реализация имущества
             span.slider-step__txt Походатайствуем чтобы реализация имущества правилась быстро.&nbsp;
               | Будем поддерживать контакт с кредиторами.
-              | Смотреть чтобы все придерживались плану реструктуризации долгов.
+              | Смотреть чтобы все придерживались плана реструктуризации долгов.
           .slider-step__box-button
             a.button.button_middle.slider-step__button.js-smooth-scroll(href="#guarantees" tabindex="-1")
               span.button__txt Начать процедуру банкротства
